[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "africalim-tau"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Mechiel Christiaan Bezuidenhout", email = "bezmc93@gmail.com"},
  {name = "Lebogang Mfulwane", email = ""},
  {name = "Thulo Letsele"},
  {name = "Trevor Nyambe"},
  {email = "bezmc93@gmail.com"},
]
maintainers = [
  {name = "MC Bezuidenhout", email = "bezmc93@gmail.com"}
]
description = "Group Tau: AfriCALIM project 2024"
readme = "README.md"
license = {file = "LICENSE"}
keywords = []

